Changes of layout

--- a/Travel0/templates/travel0/index.html
+++ b/Travel0/templates/travel0/index.html
@@ -10,19 +10,7 @@
 </head>
 <body>
 <!--Navbar section-->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-              <a class="navbar-item" href="https://bulma.io">
-                <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
-              </a>
-          
-              <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-              </a>
-            </div>
-          </nav>
+ 
 <!--Hero section - banner + fields -->
     <section class="hero is-medium is-primary is-bold">
         <div class="hero-body">
@@ -35,9 +23,6 @@
                                 <div class="select column is-offset-0 is-2.5">
                                     {{form.outboundDepartureAirportIataCode}}
                                 </div>
-                                <div class="select column is-offset-0 is-2.5">
-                                        {{form.arrivalAirportIataCode}}
-                                    </div>
                                 <div class="control column is-offset-0.5 is-2.5">
                                     {{form.outboundDepartureDateFrom}}
                                 </div>
@@ -79,10 +64,10 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p>
-                                            <span class="is-size-4">Wylot: {{ fares_info.outboundDepartureAirportName }} do {{ fares_info.outboundArrivalAirportName }} 
+                                            <span class="is-size-4">Wylot {{fares_info.outboundDepartureDate}}: {{ fares_info.outboundDepartureAirportName }} do {{ fares_info.outboundArrivalAirportName }} 
                                                                 za: {{fares_info.outboundPriceValue}} {{fares_info.outboundCurrencyCode}}  </span>
                                             <br>
-                                            <span class="is-size-4">Powrót: {{ fares_info.inboundDepartureAirportName }} do {{ fares_info.inboundArrivalAirportName }}  
+                                            <span class="is-size-4">Powrót {{fares_info.inboundDepartureDate}}: {{ fares_info.inboundDepartureAirportName }} do {{ fares_info.inboundArrivalAirportName }}  
                                                                 za: {{fares_info.inboundPriceValue}} {{fares_info.inboundCurrencyCode}}</span>
                                             <br> 
                                         </p>
