--- a/Travel0/templates/travel0/index.html
+++ b/Travel0/templates/travel0/index.html
@@ -1,92 +1,117 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>TravelZero Project</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TravelZero.com</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />  
-</head>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    
+    <!--Datepicker -->
+    
+<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
+    <!--Load CSS styles-->
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+  </head>
 <body>
-<!--Navbar section-->
- 
-<!--Hero section - banner + fields -->
-    <section class="hero is-medium is-primary is-bold">
-        <div class="hero-body">
-            <div class="container">
-                <div class="columns">
-                    <div class="column is-offset-0 is-12">
-                        <form method="POST">
-                        {% csrf_token %}
-                            <div class="field has-addons">
-                                <div class="select column is-offset-0 is-2.5">
-                                    {{form.outboundDepartureAirportIataCode}}
-                                </div>
-                                <div class="control column is-offset-0.5 is-2.5">
-                                    {{form.outboundDepartureDateFrom}}
-                                </div>
-                                <div class="control column is-offset-0.5 is-2.5" >
-                                    {{form.outboundDepartureDateTo}}
-                                </div>
-                                <div class="control column is-offset-0.5 is-2.5" >
-                                    {{form.inboundDepartureDateFrom}}
-                                    <label class="checkbox">
-                                            <input type="checkbox">
-                                            Wybierz zakres dat
-                                    </label>
-                                </div>
-                                <div class="control column is-offset-0.5 is-2.5" >
-                                    {{form.inboundDepartureDateTo}}
-                                </div>
-                                <div class="control column is-offset-0.5 is-2.5">
-                                    <button type="submit" class="button is-info">
-                                        Szukaj
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+    <!--Navbar section-->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="http://disputebills.com"><img src="{% static "img/logo2.png" %}" alt="TravelZero Logo"/>
+                </a>
             </div>
-        </section>
-    </div>
-    </div>
-<!--Searching results section-->
-    </section>
-        <section class="section">
+            <div id="navbar1" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                  <li><a href="#">Home</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--Search panel-->
+    <div class="container-full-bg">
+        <div class="jumbotron">
             <div class="container">
-                <div class="columns">
-                    <div class="column is-offset-0 is-12">
-                        {% for fares_info in fares %}
-                        <div class="box">
-                            <article class="media">
-                                <div class="media-content">
-                                    <div class="content">
-                                        <p>
-                                            <span class="is-size-4">Wylot {{fares_info.outboundDepartureDate}}: {{ fares_info.outboundDepartureAirportName }} do {{ fares_info.outboundArrivalAirportName }} 
-                                                                za: {{fares_info.outboundPriceValue}} {{fares_info.outboundCurrencyCode}}  </span>
-                                            <br>
-                                            <span class="is-size-4">Powrót {{fares_info.inboundDepartureDate}}: {{ fares_info.inboundDepartureAirportName }} do {{ fares_info.inboundArrivalAirportName }}  
-                                                                za: {{fares_info.inboundPriceValue}} {{fares_info.inboundCurrencyCode}}</span>
-                                            <br> 
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="media-left">
-                                    <a class="button is-success is-focused is-medium ">Razem: {{ fares_info.summaryPriceValue }} {{ fares_info.summaryCurrencyCode }}</a>
-                                </div>
-                            </article>
+                <form method="POST">
+                  
+                    {% csrf_token %}
+                    <div class="row">
+                         <div class="col-md-3 ">
+                             {{form.outboundDepartureAirportIataCode}}
                         </div>
-                        {% endfor %}
+                        <div class="col-md-2">
+                                {{form.outboundDepartureDateFrom}}
+                        </div>
+                        <div class="col-md-2">
+                            {{form.outboundDepartureDateTo}}
+                        </div>
+                        <div class="col-md-2">
+                            {{form.inboundDepartureDateFrom}}
+                        </div>
+                        <div class="col-md-2">
+                            {{form.inboundDepartureDateTo}}
+                        </div>
+                        <div class="col-md-1">
+                            <button type="submit" class="btn btn-success">
+                                Szukaj
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <section class="section">
+        <div class="container">
+            {% for fares_info in fares %}
+            <div class="panel-group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse">
+                                        Wylot: {{ fares_info.outboundDepartureAirportName }} do {{ fares_info.outboundArrivalAirportName }} 
+                                        za: {{fares_info.outboundPriceValue}} {{fares_info.outboundCurrencyCode}}
+                                        <button type="submit" class="btn btn-success pull-right">Razem: {{ fares_info.summaryPriceValue }} {{ fares_info.summaryCurrencyCode }}</button>
+                                        <br>
+                                        Powrót: {{ fares_info.inboundDepartureAirportName }} do {{ fares_info.inboundArrivalAirportName }}  
+                                        za: {{fares_info.inboundPriceValue}} {{fares_info.inboundCurrencyCode}}
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapse" class="panel-collapse collapse">
+                        <div class="panel-body">
+                                Wyjazd:
+                                <br>
+                                Wylot z {{ fares_info.outboundDepartureAirportName }}: {{fares_info.outboundDepartureDate}}
+                                <br>
+                                Przylot do {{ fares_info.outboundArrivalAirportName}}: {{fares_info.outboundArrivalDate}}
+                                <hr>
+                                Powrót:
+                                <br>
+                                Wylot z {{ fares_info.inboundDepartureAirportName }}: {{fares_info.inboundDepartureDate}}
+                                <br>
+                                Przylot do {{ fares_info.inboundArrivalAirportName}}: {{fares_info.inboundArrivalDate}}
+                                <br>
+                            
+                                
+                            </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
+        </div>
     </section>
-<!--Footer section-->
-    <footer class="footer">
-        
-    </footer>
-</body>
-
+    
+   
+  </body>
 </html>
