--- a/Travel0/templates/travel0/index.html
+++ b/Travel0/templates/travel0/index.html
@@ -17,7 +17,6 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
     <!--Load CSS styles-->
     {% load static %}
@@ -28,7 +27,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="http://disputebills.com"><img src="{% static "img/logo2.png" %}" alt="TravelZero Logo"/>
+                <a class="navbar-brand"><img src="{% static "img/logo2.png" %}" alt="TravelZero Logo"/>
                 </a>
             </div>
             <div id="navbar1" class="navbar-collapse collapse">
