--- a/Travel0/static/css/style.css
+++ b/Travel0/static/css/style.css
@@ -1,3 +1,22 @@
+html{
+  position:relative; 
+  min-height: 100%;
+}
+
+html,body{
+  margin:0;
+  padding:0;
+}
+
+.footer{
+  position: absolute;
+    margin-top: 10px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height:auto;
+    background:white;
+}
 
 .navbar{
   margin-bottom: 0px;
@@ -8,10 +27,16 @@
 .navbar-brand {
     padding: 0px;
   }
+
   .navbar-brand>img {
     height: 100%;
     width: auto;
   }
+
+.results{
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
 
 .container-full-bg{
   background: url('/static/img/jumbobg.jpeg') no-repeat center center;
@@ -20,21 +45,23 @@
   width: 100%;
   height: 100%; /*same height as jumbotron */
   z-index: -1;
-  
 }
+
 .jumbotron {  
   height: 100%;
   background:transparent;
-  
-
-     }
-.col-md-3{
-
-  
 }
 
 .btn{
   margin-left: 10px;
-  margin-right: 10px;
+}
+
+#description{
+  font-weight: bold;
+  color: white;
+}
+
+.dsc{
+  text-align: center
 }
 
